@@ -8,7 +8,8 @@
 % the problem without and with the constraints.  The exact solution and
 % the results from the methods are shown. 
 %
-% See also: demo_art, demo_matrixfree, demo_sirt, demo_training.
+% See also: demo_art, demo_custom, demo_matrixfree, demo_sirt, 
+% demo_training.
 
 % Maria Saxild-Hansen and Per Chr. Hansen, Oct. 21, 2010, DTU Compute.
 
